# slang

./: .appveyor.yml  .ccls  .clang-format  .clang-tidy  .codecov.yml  .flake8  .gitattributes  .gitignore  .gitmodules  .lcovrc  .lgtm.yml  .pre-commit-config.yaml  .slang-tidy  .travis.yml  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  LICENSE  README.jcamaster  README.md  REUSE.toml  azure-pipelines.yml  codecov.yml  conanfile.py  conanfile.txt  cpplint.cfg  jcatest.sh  pyproject.toml  slang.natvis  test_formatting.sv  todo.txt
bindings/: CMakeLists.txt  generate_stubs.cmake
bindings/python/: ASTBindings.cpp  AnalysisBindings.cpp  CompBindings.cpp  ExpressionBindings.cpp  NumericBindings.cpp  PyDiagnostic.h  PyVisitors.h  StatementBindings.cpp  SymbolBindings.cpp  SyntaxBindings.cpp  SyntaxFactoryBindings.cpp  TypeBindings.cpp  UtilBindings.cpp  ast.cpp  binding.cpp  compilation.cpp  numeric.cpp  pyslang.cpp  pyslang.h  symbols.cpp  syntax.cpp  types.cpp  util.cpp  visitor.h
docs/: CMakeLists.txt  Doxyfile.in  api-reference.dox  building.dox  command-line-ref.dox  common-components.dox  conf.py  developer-guide.dox  diagnostic-apis.dox  diagnostics.dox  enums.dox  getting-started.dox  grammar.md  grammar_sdf.md  index.html  index.rst  language-support.dox  mainpage.dox  namespaces.dox  overview.dox  parsing.dox  source-management.dox  tools.dox  user-manual.dox  waivers.dox  waivers.md
examples/integration/: CMakeLists.txt  README.md  main.cpp
pyslang/: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
pyslang/docs/: conf.py
pyslang/examples/: README.md  README_logic_extractor.md  concrete_syntax_tree_to_json.py  driver.py  extract_logic_names.py  extract_logic_names_demo.py
pyslang/pyslang/: __init__.py  __init__.pyi
pyslang/source/: compilation.cpp  numeric.cpp  pyslang.cpp  pyslang.h  syntax.cpp  util.cpp
pyslang/tests/: conftest.py  some_file.svh  test_accessing_spans.py  test_analysis.py  test_basics.py  test_class_bindings.py  test_cst_json.py  test_custom_systasks.py  test_diags.py  test_driver.py  test_extract_comments.py  test_extract_logic_names.py  test_generate_provenance.py  test_lexer.py  test_numerics.py  test_syntax_factory.py  test_syntax_rewriter.py  test_syntax_tree_equality.py  test_syntax_tree_to_json.py  test_visitors.py
source/: BindContext.cpp  Binder.cpp  BitVector.cpp  BumpAllocator.cpp  CMakeLists.txt  CharInfo.h  ConstantEvaluator.cpp  ConstantValue.cpp  DeclarationTable.cpp  DeclarationTable.h  Diagnostics.cpp  ExpressionBinder.cpp  FileSystem.cpp  FileTracker.cpp  Hash.cpp  HeaderSearch.cpp  Lexer.cpp  LexerFacts.cpp  LexerTables.cpp  MacroExpander.cpp  ModuleSymbol.cpp  Parser.cpp  ParserBase.cpp  Parser_expressions.cpp  Parser_statements.cpp  Preprocessor.cpp  SVInt.cpp  SVIntHelpers.h  Scope.cpp  SemanticModel.cpp  SourceManager.cpp  SourceTracker.cpp  StringRef.cpp  Symbol.cpp  SyntaxAccessors.cpp  SyntaxFacts.cpp  SyntaxNode.cpp  SyntaxTree.cpp  Token.cpp  Trivia.cpp  (+2 more)
source/analysis/: AbstractFlowAnalysis.cpp  AnalysisManager.cpp  AnalysisScopeVisitor.h  AnalyzedAssertion.cpp  AnalyzedProcedure.cpp  Binder.cpp  Binder.h  BoundNodes.h  CaseDecisionDag.cpp  ClockInference.cpp  Compilation.cpp  Compilation.h  ConstantEvaluator.cpp  ConstantEvaluator.h  ConstantValue.cpp  ConstantValue.h  ConstraintAnalysis.h  DFAResults.cpp  DataFlowAnalysis.cpp  DeclarationTable.cpp  DeclarationTable.h  DriverTracker.cpp  EvalContext.cpp  EvalContext.h  ExpressionBinder.cpp  ExpressionBinder.h  Expressions.cpp  Expressions.h  HierarchySymbols.cpp  LSPUtilities.cpp  MemberSymbols.cpp  NonProceduralExprVisitor.h  RootSymbol.cpp  RootSymbol.h  Scope.h  ScriptSession.h  SemanticFacts.cpp  SemanticModel.cpp  SemanticModel.h  Statements.cpp  (+9 more)
source/ast/: ASTContext.cpp  ASTDiagMap.cpp  ASTSerializer.cpp  BindContext.cpp  Bitstream.cpp  CMakeLists.txt  ClockResolution.cpp  Compilation.cpp  Constraints.cpp  DefParamResolver.cpp  Definition.cpp  ElabVisitors.h  EvalContext.cpp  Expression.cpp  FmtHelpers.cpp  FmtHelpers.h  FormatHelpers.cpp  HierarchicalReference.cpp  InstanceCacheKey.cpp  InstancePath.cpp  LSPUtilities.cpp  LValue.cpp  Lookup.cpp  OpaqueInstancePath.cpp  Patterns.cpp  SFormat.cpp  Scope.cpp  ScriptSession.cpp  SemanticFacts.cpp  SemanticModel.cpp  Statement.cpp  Statements.cpp  Symbol.cpp  SystemSubroutine.cpp  TimingControl.cpp  TypeProvider.cpp  ValuePath.cpp
source/binding/: AssertionExpr.cpp  AssignmentExpressions.cpp  BindContext.cpp  BindContext.h  Binder.cpp  Binder.h  Bitstream.cpp  CallExpression.cpp  ConstantValue.cpp  ConstantValue.h  Constraints.cpp  EvalContext.cpp  EvalContext.h  Expression.cpp  Expressions.cpp  Expressions.h  Expressions_eval.cpp  Expressions_lookup.cpp  Expressions_prop.cpp  FormatHelpers.cpp  LValue.cpp  LiteralExpressions.cpp  Lookup.cpp  Lookup.h  MiscExpressions.cpp  OperatorExpressions.cpp  PatternExpressions.cpp  Patterns.cpp  SelectExpressions.cpp  Statements.cpp  Statements.h  SystemSubroutine.cpp  SystemSubroutine.h  TimingControl.cpp
source/codegen/: CGBuilder.h  CGExpr.cpp  CGSysCall.cpp  CMakeLists.txt  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenTypes.cpp  CodeGenTypes.h  CodeGenerator.cpp  CodegenImpl.h  ExprEmitter.cpp  FunctionDef.cpp  JIT.cpp  StmtEmitter.cpp  SysCallEmitter.cpp
source/compilation/: BuiltInSubroutines.cpp  BuiltInSubroutines.h  Compilation.cpp  Compilation.h  Definition.cpp  DesignTree.cpp  ElabVisitors.h  InstanceCache.cpp  SFormat.cpp  ScriptSession.cpp  ScriptSession.h  SemanticModel.cpp
source/diagnostics/: DiagnosticClient.cpp  DiagnosticEngine.cpp  Diagnostics.h  (+7 more)
tests/: CMakeLists.txt  ExpressionParsingTests.cpp  FileTests.cpp  FullParserTests.cpp  LexerTests.cpp  ModuleParsingTests.cpp  ParserTests.cpp  PreprocessorTests.cpp  StatementParsingTests.cpp  lexer_tests.cpp  main.cpp  snippets.md
tools/: CMakeLists.txt  grammar.txt  grammar_gen.py  shell.cpp  syntax.txt  syntax_gen.py
(+1355 files in other folders)
